# Distributed-File-System

./: .gitignore  README.md  curl.sh  servant.hsfiles
Api/: README.md  api.cabal
Api/src/Api/: Auth.hs  Config.hs  Directory.hs  File.hs  Locking.hs  Models.hs  Query.hs
Auth-Server/: Auth-Server.cabal  stack.yaml
Auth-Server/app/: Main.hs
Auth-Server/src/: Api.hs  Config.hs  Controller.hs  Database.hs  Server.hs
Client/: Client.cabal  Direcotry.hs  stack.yaml
Client/app/: Main.hs
Client/src/: Config.hs  Directory.hs  Locking.hs
Config-Server/: Config-Server.cabal
Config-Server/app/: Main.hs
Config-Server/src/: Config.hs  Controller.hs  Database.hs  Server.hs
Directory-Server/: Directory-Server.cabal  README.md  stack.yaml
Directory-Server/app/: Main.hs
Directory-Server/src/: Config.hs  Controller.hs  Database.hs  DirectoryApi.hs  FileApi.hs  Models.hs  Server.hs
Directory-Server/test/: Spec.hs
File-Server/: File-Server.cabal  README.md
File-Server/app/: Main.hs
File-Server/src/: .Client.hs.swp  .Server.hs.swp  Api.hs  Client.hs  Config.hs  Server.hs
Locking-Server/: Locking-Server.cabal  README.md
Locking-Server/app/: Main.hs
Locking-Server/src/: Controller.hs  Database.hs  LockingApi.hs  Models.hs  Server.hs
