name:                api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/File-System#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Api.Directory, Api.File, Api.Locking, Api.Config ,Api.Query, Api.Auth
                     , Api.Models
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-template 
                     , aeson
                     , time
                     , text
                     , servant
                     , servant-client
                     , servant-server
                     , http-client
  default-language:    Haskell2010

executable Api
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
