name:                Client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Directory
  build-depends:       base >= 4.7 && < 5
                     , api
                     , bytestring
                     , servant
                     , servant-client
                     , servant-server
                     , http-client
                     , editor-open
  default-language:    Haskell2010


executable Client
  hs-source-dirs:      app 
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,Client
