name:              Config-Server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

library
  hs-source-dirs:      src
  exposed-modules:     Config, Controller, Server, Database

  build-depends:       base >= 4.7 && < 5
                     , api
                     , aeson
                     , base-compat
                     , servant-server
                     , wai
                     , warp
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , transformers
                     , monad-logger
                     , time
  default-language:    Haskell2010

executable Config-Server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Config-Server 
                     , persistent
  default-language:    Haskell2010

test-suite Config-Server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Config-Server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Config-Server
