name:                File-Server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Servant-Tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server, Client, Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant-client
                     , servant
                     , wai
                     , warp
                     , base-compat
                     , mtl
                     , attoparsec
                     , bytestring
                     , string-conversions
                     , time
                     , http-media
                     , http-client
                     , directory
                     , aeson-compat
  default-language:    Haskell2010

executable FileServer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , File-Server
  default-language:    Haskell2010

test-suite File-Server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , File-Server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/McGizzle/
