name:                Locking-Server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Locking-Server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config, Controller, Server, Database
  build-depends:       base >= 4.7 && < 5
                     , api
                     , aeson
                     , base-compat
                     , servant-server
                     , wai
                     , warp
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , transformers
                     , monad-logger
                     , text
                     , time
  default-language:    Haskell2010

executable Locking-Server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Locking-Server
                     , persistent
                     , api
  default-language:    Haskell2010

test-suite Locking-Server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Locking-Server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Locking-Server
